--- a/WuxiaworldToPDF/WuxiaWorldToPDF.csproj
+++ b/WuxiaworldToPDF/WuxiaWorldToPDF.csproj
@@ -2,33 +2,27 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="appsettings.json" />
+    <Content Remove="C:\Users\salaz\.nuget\packages\select.pdf.netcore\20.2.0\contentFiles\any\any\Select.Html.dep" />
+    <Content Remove="C:\Users\salaz\.nuget\packages\select.pdf.netcore\20.2.0\contentFiles\any\any\Select.Tools.dep" />
   </ItemGroup>
 
   <ItemGroup>
-    <ApplicationDefinition Include="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </ApplicationDefinition>
     <ApplicationDefinition Include="Chapter.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.32" />
+    <PackageReference Include="itext7" Version="7.1.14" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.26" />
-    <PackageReference Include="morelinq" Version="3.3.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="PdfSharpCore" Version="1.2.8" />
-    <PackageReference Include="Select.HtmlToPdf.NetCore" Version="20.2.0" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Domaind\Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
